# glfwExamples

./: CMakeLists.txt  README.md
basico/: 3dCube.cpp  Utils.cpp  Utils.hpp  fragShader.glsl  fragmentShaderCube.glsl  redW.cpp  shader.cpp  shaderVertex.cpp  ventana.cpp  version.cpp  vertShader.glsl  vertexShaderCube.glsl  vertexTriangle.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
